IGNITE-28630: migration to newer verison started